# DistributedNNTraining

./: .gitignore  CMakeLists.txt  Loading_MNIST.ipynb  Visualization.ipynb  compile.txt  main.cpp  test.cpp
data/: dist_cpu.csv  dist_gpu.csv  shared_cpu  shared_cpu.csv  shared_gpu.csv
src/: c_matrix_utils.cu  c_matrix_utils.cuh  data_utils.cpp  data_utils.hpp  matrix_utils.cpp  matrix_utils.hpp  nn_trainer.cpp  nn_trainer.hpp  nn_utils.cpp  nn_utils.hpp
